--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -929,7 +929,7 @@ textarea:focus {
 
 .popup_calc_content .big_img img {
   display: none;
-  margin-bottom: 3rem;
+  margin: 0 auto 3rem;
   width: 30rem;
 }
 
